Closed Bug 239275 Opened 22 years ago Closed 21 years ago

select object's onchange event fires without change

Categories

(Camino Graveyard :: HTML Form Controls, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: shy, Assigned: mikepinkerton)

References

Details

(Keywords: testcase)

Attachments

(2 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7b) Gecko/20040317 Camino/0.7+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7b) Gecko/20040317 Camino/0.7+ With a select object, when selecting the same option that already had been selected, Camino wrongly fires the onchange event. No other browaser does that. Reproducible: Always Steps to Reproduce: 1. Click on a select object, thus expanding it 2. Select the already active option Actual Results: onchange is fired Expected Results: it shouldn't
Attached file test case
shouldn't be too hard to fix in the native popup list form control code
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Camino0.9
Keywords: testcase
first time i've sent in a patch but I think this is correct
Attachment #158141 - Flags: review?(joshmoz)
doesn't this stop it from firing any action if there is already a selection?
selected is for that specific option not all options. Found another bug, onclick doesn't appear to fire at all. Thats prior to this patch, I'll see how complicated it is to fix and file another bug if appropriate.
I looked at the patch, but I don't have time to get the background I'd need to say whether or not this change is safe. Anybody know why this sort of code is in Camino's embedding and not part of cocoa widgets (mozilla/widgets)?
Comment on attachment 158141 [details] [diff] [review] patch to stop onchange event triggering for already selected element I'd rather the review came from someone else for this one...
Attachment #158141 - Flags: review?(joshmoz) → review?(timeless)
Blocks: 261393
Attachment #158141 - Flags: review?(joshmoz)
Comment on attachment 158141 [details] [diff] [review] patch to stop onchange event triggering for already selected element Time to get this one in - this needs careful reviewing and a good amount of testing.
Attachment #158141 - Flags: review?(me)
Comment on attachment 158141 [details] [diff] [review] patch to stop onchange event triggering for already selected element This just gives me "malformed patch" when I attempt to apply. Am I doing something wrong, or is this attachment only partially uploaded, or what?
Attachment #158141 - Flags: review?(me) → review-
I'm not saying I reviewed this patch for correctness, but the patch I am attaching applies correctly.
Attachment #158141 - Attachment is obsolete: true
Attachment #158141 - Flags: review?(timeless)
Attachment #158141 - Flags: review?(joshmoz)
Attachment #164657 - Flags: review?(me)
Attachment #164657 - Flags: review?(me) → review+
looks good to me r=josh
Attachment #164657 - Flags: superreview+
landed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
landed on both trunk and 0.8.2 branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: