don't fire an onchange event when selecting the same option that is already selected in a menu (bug 239275) r=joshmoz sr=bryner